--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -118,6 +118,22 @@
         <script src="scripts/components/auth/provider/auth.session.service.js"></script>
         <script src="scripts/app/account/sessions/sessions.js"></script>
         <script src="scripts/app/account/sessions/sessions.controller.js"></script>
+        <script src="scripts/app/entities/estado/estado.js"></script>
+        <script src="scripts/app/entities/estado/estado.controller.js"></script>
+        <script src="scripts/app/entities/estado/estado-detail.controller.js"></script>
+        <script src="scripts/components/entities/estado/estado.service.js"></script>
+        <script src="scripts/app/entities/distrito/distrito.js"></script>
+        <script src="scripts/app/entities/distrito/distrito.controller.js"></script>
+        <script src="scripts/app/entities/distrito/distrito-detail.controller.js"></script>
+        <script src="scripts/components/entities/distrito/distrito.service.js"></script>
+        <script src="scripts/app/entities/municipio/municipio.js"></script>
+        <script src="scripts/app/entities/municipio/municipio.controller.js"></script>
+        <script src="scripts/app/entities/municipio/municipio-detail.controller.js"></script>
+        <script src="scripts/components/entities/municipio/municipio.service.js"></script>
+        <script src="scripts/app/entities/ruta/ruta.js"></script>
+        <script src="scripts/app/entities/ruta/ruta.controller.js"></script>
+        <script src="scripts/app/entities/ruta/ruta-detail.controller.js"></script>
+        <script src="scripts/components/entities/ruta/ruta.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
