added entities Distrito, Estado, Municipio, PartidosPoliticos, Ruta y Seccion

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -134,6 +134,14 @@
         <script src="scripts/app/entities/ruta/ruta.controller.js"></script>
         <script src="scripts/app/entities/ruta/ruta-detail.controller.js"></script>
         <script src="scripts/components/entities/ruta/ruta.service.js"></script>
+        <script src="scripts/app/entities/seccion/seccion.js"></script>
+        <script src="scripts/app/entities/seccion/seccion.controller.js"></script>
+        <script src="scripts/app/entities/seccion/seccion-detail.controller.js"></script>
+        <script src="scripts/components/entities/seccion/seccion.service.js"></script>
+        <script src="scripts/app/entities/partidosPoliticos/partidosPoliticos.js"></script>
+        <script src="scripts/app/entities/partidosPoliticos/partidosPoliticos.controller.js"></script>
+        <script src="scripts/app/entities/partidosPoliticos/partidosPoliticos-detail.controller.js"></script>
+        <script src="scripts/components/entities/partidosPoliticos/partidosPoliticos.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
