added elector entity

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -142,6 +142,10 @@
         <script src="scripts/app/entities/partidosPoliticos/partidosPoliticos.controller.js"></script>
         <script src="scripts/app/entities/partidosPoliticos/partidosPoliticos-detail.controller.js"></script>
         <script src="scripts/components/entities/partidosPoliticos/partidosPoliticos.service.js"></script>
+        <script src="scripts/app/entities/elector/elector.js"></script>
+        <script src="scripts/app/entities/elector/elector.controller.js"></script>
+        <script src="scripts/app/entities/elector/elector-detail.controller.js"></script>
+        <script src="scripts/components/entities/elector/elector.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
