updated elector entity self relationship name

--- a/src/main/webapp/scripts/app/entities/elector/elector-detail.html
+++ b/src/main/webapp/scripts/app/entities/elector/elector-detail.html
@@ -132,10 +132,10 @@
                 </tr>
                 <tr>
                     <td>
-                        <span translate="diidxavoteApp.elector.elector">elector</span>
+                        <span translate="diidxavoteApp.elector.responsable">elector</span>
                     </td>
                     <td>
-                        <input type="text" class="input-sm form-control" value="{{elector.elector.nombre}}" readonly>
+                        <input type="text" class="input-sm form-control" value="{{elector.responsable.nombre}}" readonly>
                     </td>
                 </tr>
             </tbody>
