--- a/src/main/webapp/scripts/app/entities/elector/electors.html
+++ b/src/main/webapp/scripts/app/entities/elector/electors.html
@@ -102,8 +102,8 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label translate="diidxavoteApp.elector.elector">elector</label>
-                            <select class="form-control" ng-model="elector.elector.id" ng-options="elector.id as elector.nombre for elector in electors">
+                            <label translate="diidxavoteApp.elector.responsable">responsable</label>
+                            <select class="form-control" ng-model="elector.responsable.id" ng-options="elector.id as elector.nombre for elector in electors">
                             </select>
                         </div>
 
@@ -166,7 +166,7 @@
                     <th translate="diidxavoteApp.elector.ruta">ruta</th>
                     <th translate="diidxavoteApp.elector.seccion">seccion</th>
                     <th translate="diidxavoteApp.elector.partidosPoliticos">partidosPoliticos</th>
-                    <th translate="diidxavoteApp.elector.elector">elector</th>
+                    <th translate="diidxavoteApp.elector.responsable">responsable</th>
                     <th></th>
                 </tr>
             </thead>
@@ -188,7 +188,7 @@
                     <td>{{elector.ruta.descripcion}}</td>
                     <td>{{elector.seccion.id}}</td>
                     <td>{{elector.partidosPoliticos.nombre}}</td>
-                    <td>{{elector.elector.nombre}}</td>
+                    <td>{{elector.responsable.nombre}}</td>
                     <td>
                         <button type="submit"
                                 ui-sref="electorDetail({id:elector.id})"
